<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartMainGraphic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/pieChartMainGraphic"
        app:layout_constraintEnd_toEndOf="@id/pieChartMainGraphic"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="@id/pieChartMainGraphic"
        app:layout_constraintTop_toTopOf="@id/pieChartMainGraphic" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewMyInvestimentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_investments" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewMyInvestiments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_invested"
            android:textColor="@color/black"
            android:textSize="@dimen/dimensOf18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewMyIncomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimensOf32dp"
            android:text="@string/income" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewMyIncomeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_value"
            android:textColor="@color/black"
            android:textSize="@dimen/dimensOf18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pieChartMainGraphic" />

</androidx.constraintlayout.widget.ConstraintLayout>